--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -178,7 +178,7 @@
         </div>
        </div>
       </div>
-      <div class="kobweb-box kobweb-align-center" style="width: 100%; max-width: 1920px; padding: 100px 0px; background-color: rgb(249, 249, 249);">
+      <div class="kobweb-box kobweb-align-center" style="width: 100%; padding: 100px 0px; background-color: rgb(249, 249, 249);">
        <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 100%;">
         <img class="silk-image" style="width: 100px; height: 100px;" src="logo.svg" alt="Logo image">
         <div class="kobweb-row kobweb-arrange-center kobweb-align-top" style="width: 100%;">
