--- a/site/.kobweb/site/index.html
+++ b/site/.kobweb/site/index.html
@@ -16,7 +16,7 @@
    <div class="silk-surface silk-smooth-color kobweb-box kobweb-align-top-start" style="min-height: 100vh;">
     <div class="kobweb-box kobweb-align-top-start" style="width: 100%; height: 100%;">
      <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 100%; height: 100%;">
-      <div class="kobweb-box kobweb-align-top-center" style="max-width: 1920px;" id="home">
+      <div class="kobweb-box kobweb-align-top-center" id="home">
        <img class="silk-image" style="width: 100%; height: 100%; object-fit: cover;" src="background.svg" alt="Background image">
        <div class="kobweb-col kobweb-arrange-space-between kobweb-align-center-horiz" style="width: 100%; height: 100%;">
         <div class="kobweb-row kobweb-arrange-space-between kobweb-align-center-vert" style="width: 80%; margin: 50px 0px;">
@@ -50,7 +50,7 @@
         </div>
        </div>
       </div>
-      <div class="kobweb-box kobweb-align-center" style="max-width: 1920px; padding: 100px 0px;" id="portfolio">
+      <div class="kobweb-box kobweb-align-center" style="padding: 100px 0px;" id="portfolio">
        <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 100%;">
         <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; margin: 0px 0px 25px;">
          <p style="width: 100%; text-align: start; margin: 0px 0px 0px 50px; font-family: Roboto; font-size: 25px; font-weight: normal; color: rgb(118, 88, 152); transition: margin 300ms ease 0s;">Portfolio</p>
@@ -115,7 +115,7 @@
         </div>
        </div>
       </div>
-      <div class="kobweb-box kobweb-align-center" style="max-width: 1920px; padding: 100px 0px;" id="experience">
+      <div class="kobweb-box kobweb-align-center" style="padding: 100px 0px;" id="experience">
        <div class="kobweb-col kobweb-arrange-top kobweb-align-center-horiz" style="width: 100%;">
         <div class="kobweb-col kobweb-arrange-top kobweb-align-start" style="width: 100%; margin: 0px 0px 25px; max-width: 60%;">
          <p style="width: 100%; text-align: start; margin: 0px 0px 0px 50px; font-family: Roboto; font-size: 25px; font-weight: normal; color: rgb(118, 88, 152); transition: margin 300ms ease 0s;">Experience</p>
